--- a/docs/.vuepress/theme/styles/custom.css
+++ b/docs/.vuepress/theme/styles/custom.css
@@ -1,12 +1,10 @@
 :root {
   /** 主题颜色 */
 
-  /*
-  --vp-c-brand-1: #5086a1;
-  --vp-c-brand-2: #6aa1b7;
-  --vp-c-brand-3: #8cccd5;
+  --vp-c-brand-1: #195bcd;
+  --vp-c-brand-2: #0276EA;
+  --vp-c-brand-3: #5CBFFE;
   --vp-c-brand-soft: rgba(131, 208, 218, 0.314);
-  */
 
   /** 背景颜色 */
 
@@ -26,12 +24,11 @@
   */
   --vp-home-hero-name-color: transparent;
   --vp-home-hero-name-background: linear-gradient(120deg, var(--vp-c-purple-1) 30%, var(--vp-c-brand-2));
-  --vp-home-hero-tagline: var(--vp-c-text-2);
   --vp-home-hero-text: var(--vp-c-text-1);
-  --vp-home-hero-image-background-image: linear-gradient(-45deg, var(--vp-c-brand-soft) 50%, var(--vp-c-brand-2) 50%);
+  --vp-home-hero-image-background-image: linear-gradient(-45deg, #1d90d7 50%, var(--vp-c-brand-2) 50%);
   --vp-home-hero-image-filter: blur(44px);
 
-  --vp-sidebar-width: 300px !important;
+  /* --vp-sidebar-width: 300px !important; */
 }
 
 /** 深色模式 */
@@ -60,6 +57,10 @@
 /* home */
 .vp-home-doc-hero .image {
   margin-top: 60px !important;
+}
+
+.vp-home-doc-hero .image-bg {
+  margin-top: 10px !important;
 }
 
 .vp-home-doc-hero .name {
